flapivor/tests/m1/hopix/parser/bad/40-type-definition-record-3.hopix
type Bool = True | False

type '<a, b> = `(a, b)

type Collection<t, a> = {
  empty : t;
  add   : a * t -> t;
  map   : (a -> a) -> t -> t;
  split : (a -> Bool) -> `<t, t>
}